Fix import path for hero image in index.astro

--- a/peaceful-parallax/src/pages/index.astro
+++ b/peaceful-parallax/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import heroImage from "../assets/creative-christians-XNJK6Mz6vdM-unsplash.jpg?url";
+import heroImage from "../assets/creative-christians-XNJK6Mz6vdM-unsplash.jpg";
 import transformationImage from "../assets/53 ans.png";
 ---
 
