--- a/peaceful-parallax/src/pages/index.astro
+++ b/peaceful-parallax/src/pages/index.astro
@@ -2,6 +2,10 @@
 import Layout from "../layouts/Layout.astro";
 import heroImage from "../assets/hero.jpg";
 import transformationImage from "../assets/53 ans.png";
+import batteryImage from "../assets/battery.png";
+import foodImage from "../assets/food.png";
+import stressImage from "../assets/stress.png";
+import sedentaryImage from "../assets/sedentary.png";
 ---
 
 <Layout title="Accueil">
@@ -61,7 +65,12 @@ Réserver mon appel découverte gratuit
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-12">
         <!-- Freins -->
         <div class="bg-gray-50 p-6 rounded-lg border-l-4 border-orange-500 fade-up">
-          <h3 class="text-xl font-semibold text-blue-700 mb-2">✅ Manque de motivation</h3>
+          <h3 class="text-xl font-semibold text-blue-700 mb-2flex items-center">
+		<img
+            src={batteryImage}
+            alt="motivation"
+            class="w-5 h-5 mr-2"
+        /> Manque de motivation</h3>
           <p class="text-gray-600">Retrouvez l’envie d’agir avec des objectifs clairs et réalistes.</p>
         </div>
         <div class="bg-gray-50 p-6 rounded-lg border-l-4 border-orange-500 fade-up fade-delay-1">
