Update import paths for asset images in index.astro

--- a/peaceful-parallax/src/pages/index.astro
+++ b/peaceful-parallax/src/pages/index.astro
@@ -2,10 +2,10 @@
 import Layout from "../layouts/Layout.astro";
 import heroImage from "../assets/hero.jpg";
 import transformationImage from "../assets/53 ans.png";
-import batteryImage from "../assets/battery.png";
-import foodImage from "../assets/food.png";
-import stressImage from "../assets/stress.png";
-import sedentaryImage from "../assets/sedentary.png";
+import batteryImage from "../../assets/battery.png";
+import foodImage from "../../assets/food.png";
+import stressImage from "../../assets/stress.png";
+import sedentaryImage from "../../assets/sedentary.png";
 ---
 
 <Layout title="Accueil">
