--- a/peaceful-parallax/src/pages/index.astro
+++ b/peaceful-parallax/src/pages/index.astro
@@ -64,13 +64,8 @@ Réserver mon appel découverte gratuit
       </p>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-12">
         <!-- Freins -->
-        <div class="bg-gray-50 p-6 rounded-lg border-l-4 border-orange-500 fade-up">
-          <h3 class="text-xl font-semibold text-blue-700 mb-2 flex items-center">
-		<img
-            src={batteryImage}
-            alt="motivation"
-            class="w-8 h-8 mr-2"
-        /> Manque de motivation</h3>
+        <div class="bg-gray-50 p-6 rounded-lg border-l-4 border-orange-500 fade-up fade-delay-1">
+          <h3 class="text-xl font-semibold text-blue-700 mb-2">✅ Manque de motivation</h3>
           <p class="text-gray-600">Retrouvez l’envie d’agir avec des objectifs clairs et réalistes.</p>
         </div>
         <div class="bg-gray-50 p-6 rounded-lg border-l-4 border-orange-500 fade-up fade-delay-1">
